some exp details

--- a/exp_conf_examples/mbpo_vae/train_mbpo_vae_test_bug.yml
+++ b/exp_conf_examples/mbpo_vae/train_mbpo_vae_test_bug.yml
@@ -38,7 +38,7 @@ rl:
       max_num_epochs: 5
       real_sample_ratio: 0.
       num_warmup_samples: 500
-      encoder_update_interval: 10
+      encoder_update_interval: [ 0, 1, 10, 25 ]
     sac:
       actor_hidden_dims: [256, 256]
       critic_hidden_dims: [256, 256]
